--- a/notebooks/BR_Zp_Decays.ipynb
+++ b/notebooks/BR_Zp_Decays.ipynb
@@ -51,22 +51,21 @@
     "def Zpuu(MZp, gqA, gqV):\n",
     "    gqL = gqV + gqA\n",
     "    gqR = gqV - gqA\n",
-    "    Zpuu =  simplify(simplify( ((-48*gqA**2*MU**2 + 48*gqA*gqL*gZp*MU**2 - 48*gqA*gqR*gZp*MU**2 - 6*gqL**2*gZp**2*MU**2 + 36*gqL*gqR*gZp**2*MU**2 - 6*gqR**2*gZp**2*MU**2 + 12*gqA**2*MZp**2 - 12*gqA*gqL*gZp*MZp**2 + 12*gqA*gqR*gZp*MZp**2 + 6*gqL**2*gZp**2*MZp**2 + 6*gqR**2*gZp**2*MZp**2)*sy.sqrt(-4*MU**2*MZp**2 + MZp**4))/(48*sy.pi*(MZp)**3)\n",
-    "                               ).subs(MU**2, X *MZp**2)).subs(X, MU**2 /MZp**2)\n",
+    "    Zpuu =  simplify(simplify( (gZp**2*(gqA**2*(1 - (4*MU**2)/MZp**2) + gqV**2*(1 + (2*MU**2)/MZp**2))*sy.sqrt((1 - (4*MU**2)/MZp**2)*MZp**4))/(16*sy.sqrt(MZp**2)*sy.pi)\n",
+    "                              ).subs(MU**2, X *MZp**2)).subs(X, MU**2 /MZp**2)\n",
     "    return Zpuu \n",
     "            \n",
     "def Zpcc(MZp, gqA, gqV):\n",
     "    gqL = gqV + gqA\n",
     "    gqR = gqV - gqA    \n",
-    "    Zpcc = simplify(simplify( ((-48*gqA**2*MC**2 + 48*gqA*gqL*gZp*MC**2 - 48*gqA*gqR*gZp*MC**2 - 6*gqL**2*gZp**2*MC**2 + 36*gqL*gqR*gZp**2*MC**2 - 6*gqR**2*gZp**2*MC**2 + 12*gqA**2*MZp**2 - 12*gqA*gqL*gZp*MZp**2 + 12*gqA*gqR*gZp*MZp**2 + 6*gqL**2*gZp**2*MZp**2 + 6*gqR**2*gZp**2*MZp**2)*sy.sqrt(-4*MC**2*MZp**2 + MZp**4))/(48*sy.pi*(MZp)**3)\n",
-    "            ).subs(MC**2, X *MZp**2)).subs(X, MC**2 /MZp**2)\n",
+    "    Zpcc = simplify(simplify((gZp**2*(gqA**2*(1 - (4*MC**2)/MZp**2) + gqV**2*(1 + (2*MC**2)/MZp**2))*sy.sqrt((1 - (4*MC**2)/MZp**2)*MZp**4))/(16*sy.sqrt(MZp**2)*sy.pi) \n",
+    "                             ).subs(MC**2, X *MZp**2)).subs(X, MC**2 /MZp**2)\n",
     "    return Zpcc\n",
     "\n",
     "def Zptt(MZp, gqA, gqV):\n",
     "    gqL = gqV + gqA\n",
     "    gqR = gqV - gqA    \n",
-    "    Zptt = simplify(simplify( ((-48*gqA**2*MT**2 + 48*gqA*gqL*gZp*MT**2 - 48*gqA*gqR*gZp*MT**2 - 6*gqL**2*gZp**2*MT**2 + 36*gqL*gqR*gZp**2*MT**2 - 6*gqR**2*gZp**2*MT**2 + 12*gqA**2*MZp**2 - 12*gqA*gqL*gZp*MZp**2 + 12*gqA*gqR*gZp*MZp**2 + 6*gqL**2*gZp**2*MZp**2 + 6*gqR**2*gZp**2*MZp**2)*sy.sqrt(-4*MT**2*MZp**2 + MZp**4))/(48*sy.pi*(MZp)**3)\n",
-    "                      ).subs(MT**2, X *MZp**2)).subs(X, MT**2 /MZp**2)\n",
+    "    Zptt = simplify(simplify( (gZp**2*(gqA**2*(1 - (4*MT**2)/MZp**2) + gqV**2*(1 + (2*MT**2)/MZp**2))*sy.sqrt((1 - (4*MT**2)/MZp**2)*MZp**4))/(16*sy.sqrt(MZp**2)*sy.pi)).subs(MT**2, X *MZp**2)).subs(X, MT**2 /MZp**2)\n",
     "    return Zptt\n",
     "\n",
     "def Zpdd(MZp, gqA, gqV):\n",
