--- a/notebooks/BR_Sd_Decays.ipynb
+++ b/notebooks/BR_Sd_Decays.ipynb
@@ -232,6 +232,15 @@
     "plt.legend()\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "(MZp**2*(6*gqL**2*gZp**2*MZp**2 + 6*gqR**2*gZp**2*MZp**2))/(48.*cmath.pi*abs(MZp)**3)"
+   ]
   }
  ],
  "metadata": {
