--- a/notebooks/BR_Sd_Decays.ipynb
+++ b/notebooks/BR_Sd_Decays.ipynb
@@ -235,11 +235,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle \\frac{MZp^{4} gqV^{2}}{4 \\pi \\left|{MZp}\\right|^{3}}$"
+      ],
+      "text/plain": [
+       "MZp**4*gqV**2/(4*pi*Abs(MZp)**3)"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "(MZp**2*(6*gqL**2*gZp**2*MZp**2 + 6*gqR**2*gZp**2*MZp**2))/(48.*cmath.pi*abs(MZp)**3)"
+    "import sympy as sy\n",
+    "from sympy import *\n",
+    "gqA = 0\n",
+    "gZp =1\n",
+    "gqV, MY1, MZp, gVd33, gAd33 = symbols('gqV MY1 MZp gVd33 gAd33')\n",
+    "gqL = (gqV + gqA)\n",
+    "(MZp**2*(6*gqL**2*gZp**2*MZp**2 + 6*gqR**2*gZp**2*MZp**2))/(48*sy.pi*abs(MZp)**3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle \\frac{MY_{1}^{4} gVd_{33}^{2}}{4 \\pi \\left|{MY_{1}}\\right|^{3}}$"
+      ],
+      "text/plain": [
+       "MY1**4*gVd33**2/(4*pi*Abs(MY1)**3)"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "gAd33 = 0\n",
+    "(MY1**2*(12*gAd33**2*MY1**2 + 12*gVd33**2*MY1**2))/(48*sy.pi*abs(MY1)**3)"
    ]
   }
  ],
