updated plots and scripts

--- a/notebooks/Obtain-BRs.ipynb
+++ b/notebooks/Obtain-BRs.ipynb
@@ -6,8 +6,8 @@
    "id": "2b2b63c1",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-09-13T19:47:36.083538Z",
-     "start_time": "2023-09-13T19:47:35.105076Z"
+     "end_time": "2023-09-18T13:21:44.289991Z",
+     "start_time": "2023-09-18T13:21:42.568469Z"
     }
    },
    "outputs": [],
@@ -52,8 +52,8 @@
    "id": "acce48f4",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-09-13T19:47:36.089476Z",
-     "start_time": "2023-09-13T19:47:36.085607Z"
+     "end_time": "2023-09-18T13:21:44.299946Z",
+     "start_time": "2023-09-18T13:21:44.293361Z"
     }
    },
    "outputs": [],
@@ -68,8 +68,8 @@
    "id": "91f2117f",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-09-13T19:47:36.306551Z",
-     "start_time": "2023-09-13T19:47:36.091237Z"
+     "end_time": "2023-09-18T13:21:44.569440Z",
+     "start_time": "2023-09-18T13:21:44.302756Z"
     }
    },
    "outputs": [],
@@ -92,7 +92,7 @@
     "\n",
     "# couplings\n",
     "gqV = np.array([0.01, 0.1, 0.2, 0.25])\n",
-    "gchi = np.array([0.1, 0.5, 1.0, 2.0])\n",
+    "gchi = np.array([0.1, 0.5, 1.0, 1.5, 2.0])\n",
     "gqA = 0.0\n",
     "gZp = 1.0\n"
    ]
@@ -103,8 +103,8 @@
    "id": "5b22801c",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-09-13T19:47:42.204118Z",
-     "start_time": "2023-09-13T19:47:36.317745Z"
+     "end_time": "2023-09-18T13:21:54.620208Z",
+     "start_time": "2023-09-18T13:21:44.576087Z"
     }
    },
    "outputs": [],
@@ -161,8 +161,8 @@
    "id": "bc3fa6c0",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-09-13T19:47:42.228062Z",
-     "start_time": "2023-09-13T19:47:42.205487Z"
+     "end_time": "2023-09-18T13:21:54.655199Z",
+     "start_time": "2023-09-18T13:21:54.624253Z"
     }
    },
    "outputs": [
@@ -258,7 +258,7 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4587</th>\n",
+       "      <th>5735</th>\n",
        "      <td>$Z^{\\prime}$</td>\n",
        "      <td>2960</td>\n",
        "      <td>0.25</td>\n",
@@ -268,7 +268,7 @@
        "      <td>0.876400</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4588</th>\n",
+       "      <th>5736</th>\n",
        "      <td>$Z^{\\prime}$</td>\n",
        "      <td>2970</td>\n",
        "      <td>0.25</td>\n",
@@ -278,7 +278,7 @@
        "      <td>0.876402</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4589</th>\n",
+       "      <th>5737</th>\n",
        "      <td>$Z^{\\prime}$</td>\n",
        "      <td>2980</td>\n",
        "      <td>0.25</td>\n",
@@ -288,7 +288,7 @@
        "      <td>0.876404</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4590</th>\n",
+       "      <th>5738</th>\n",
        "      <td>$Z^{\\prime}$</td>\n",
        "      <td>2990</td>\n",
        "      <td>0.25</td>\n",
@@ -298,7 +298,7 @@
        "      <td>0.876406</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4591</th>\n",
+       "      <th>5739</th>\n",
        "      <td>$Z^{\\prime}$</td>\n",
        "      <td>3000</td>\n",
        "      <td>0.25</td>\n",
@@ -309,7 +309,7 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>4592 rows × 7 columns</p>\n",
+       "<p>5740 rows × 7 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -320,11 +320,11 @@
        "3     $Z^{\\prime}$        170     0.01           NaN         0.1         NaN   \n",
        "4     $Z^{\\prime}$        180     0.01           NaN         0.1         NaN   \n",
        "...            ...        ...      ...           ...         ...         ...   \n",
-       "4587  $Z^{\\prime}$       2960     0.25           NaN         2.0         NaN   \n",
-       "4588  $Z^{\\prime}$       2970     0.25           NaN         2.0         NaN   \n",
-       "4589  $Z^{\\prime}$       2980     0.25           NaN         2.0         NaN   \n",
-       "4590  $Z^{\\prime}$       2990     0.25           NaN         2.0         NaN   \n",
-       "4591  $Z^{\\prime}$       3000     0.25           NaN         2.0         NaN   \n",
+       "5735  $Z^{\\prime}$       2960     0.25           NaN         2.0         NaN   \n",
+       "5736  $Z^{\\prime}$       2970     0.25           NaN         2.0         NaN   \n",
+       "5737  $Z^{\\prime}$       2980     0.25           NaN         2.0         NaN   \n",
+       "5738  $Z^{\\prime}$       2990     0.25           NaN         2.0         NaN   \n",
+       "5739  $Z^{\\prime}$       3000     0.25           NaN         2.0         NaN   \n",
        "\n",
        "      $BR(med>\\chi\\chi)$  \n",
        "0               0.405367  \n",
@@ -333,13 +333,13 @@
        "3               0.781062  \n",
        "4               0.815220  \n",
        "...                  ...  \n",
-       "4587            0.876400  \n",
-       "4588            0.876402  \n",
-       "4589            0.876404  \n",
-       "4590            0.876406  \n",
-       "4591            0.876408  \n",
+       "5735            0.876400  \n",
+       "5736            0.876402  \n",
+       "5737            0.876404  \n",
+       "5738            0.876406  \n",
+       "5739            0.876408  \n",
        "\n",
-       "[4592 rows x 7 columns]"
+       "[5740 rows x 7 columns]"
       ]
      },
      "execution_count": 5,
@@ -357,8 +357,8 @@
    "id": "96e830b9",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-09-13T19:47:42.400832Z",
-     "start_time": "2023-09-13T19:47:42.230706Z"
+     "end_time": "2023-09-18T13:21:54.894497Z",
+     "start_time": "2023-09-18T13:21:54.658977Z"
     }
    },
    "outputs": [],
@@ -391,7 +391,7 @@
     "vev2 = MZp/(2*gchi)\n",
     "\n",
     "# couplings\n",
-    "ychi = np.array([0.1, 0.5, 1.0, 2.0])\n",
+    "ychi = np.array([0.1, 0.5, 1.0, 1.5, 2.0])\n",
     "yt = np.sqrt(2)*MT/vev2\n",
     "ytau = np.sqrt(2)*MTA/vev2\n",
     "cw = MW/MZ\n",
@@ -406,8 +406,8 @@
    "id": "5ed2ab8c",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-09-13T19:47:45.146345Z",
-     "start_time": "2023-09-13T19:47:42.402352Z"
+     "end_time": "2023-09-18T13:22:00.101251Z",
+     "start_time": "2023-09-18T13:21:54.898247Z"
     }
    },
    "outputs": [],
@@ -488,8 +488,8 @@
    "id": "d10bc17d",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-09-13T19:47:45.163574Z",
-     "start_time": "2023-09-13T19:47:45.147688Z"
+     "end_time": "2023-09-18T13:22:00.126178Z",
+     "start_time": "2023-09-18T13:22:00.103351Z"
     }
    },
    "outputs": [
@@ -585,7 +585,7 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>6231</th>\n",
+       "      <th>7790</th>\n",
        "      <td>$S_{d}$</td>\n",
        "      <td>1460</td>\n",
        "      <td>NaN</td>\n",
@@ -595,7 +595,7 @@
        "      <td>0.226537</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>6232</th>\n",
+       "      <th>7791</th>\n",
        "      <td>$S_{d}$</td>\n",
        "      <td>1470</td>\n",
        "      <td>NaN</td>\n",
@@ -605,7 +605,7 @@
        "      <td>0.224156</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>6233</th>\n",
+       "      <th>7792</th>\n",
        "      <td>$S_{d}$</td>\n",
        "      <td>1480</td>\n",
        "      <td>NaN</td>\n",
@@ -615,7 +615,7 @@
        "      <td>0.221810</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>6234</th>\n",
+       "      <th>7793</th>\n",
        "      <td>$S_{d}$</td>\n",
        "      <td>1490</td>\n",
        "      <td>NaN</td>\n",
@@ -625,7 +625,7 @@
        "      <td>0.219496</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>6235</th>\n",
+       "      <th>7794</th>\n",
        "      <td>$S_{d}$</td>\n",
        "      <td>1500</td>\n",
        "      <td>NaN</td>\n",
@@ -636,7 +636,7 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>6236 rows × 7 columns</p>\n",
+       "<p>7795 rows × 7 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -647,11 +647,11 @@
        "3     $Z^{\\prime}$        170     0.01           NaN         0.1         NaN   \n",
        "4     $Z^{\\prime}$        180     0.01           NaN         0.1         NaN   \n",
        "...            ...        ...      ...           ...         ...         ...   \n",
-       "6231       $S_{d}$       1460      NaN           0.3         NaN         2.0   \n",
-       "6232       $S_{d}$       1470      NaN           0.3         NaN         2.0   \n",
-       "6233       $S_{d}$       1480      NaN           0.3         NaN         2.0   \n",
-       "6234       $S_{d}$       1490      NaN           0.3         NaN         2.0   \n",
-       "6235       $S_{d}$       1500      NaN           0.3         NaN         2.0   \n",
+       "7790       $S_{d}$       1460      NaN           0.3         NaN         2.0   \n",
+       "7791       $S_{d}$       1470      NaN           0.3         NaN         2.0   \n",
+       "7792       $S_{d}$       1480      NaN           0.3         NaN         2.0   \n",
+       "7793       $S_{d}$       1490      NaN           0.3         NaN         2.0   \n",
+       "7794       $S_{d}$       1500      NaN           0.3         NaN         2.0   \n",
        "\n",
        "      $BR(med>\\chi\\chi)$  \n",
        "0               0.405367  \n",
@@ -660,13 +660,13 @@
        "3               0.781062  \n",
        "4               0.815220  \n",
        "...                  ...  \n",
-       "6231            0.226537  \n",
-       "6232            0.224156  \n",
-       "6233            0.221810  \n",
-       "6234            0.219496  \n",
-       "6235            0.217215  \n",
+       "7790            0.226537  \n",
+       "7791            0.224156  \n",
+       "7792            0.221810  \n",
+       "7793            0.219496  \n",
+       "7794            0.217215  \n",
        "\n",
-       "[6236 rows x 7 columns]"
+       "[7795 rows x 7 columns]"
       ]
      },
      "execution_count": 8,
@@ -684,8 +684,8 @@
    "id": "61c7dfbf",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-09-13T19:47:45.425171Z",
-     "start_time": "2023-09-13T19:47:45.165788Z"
+     "end_time": "2023-09-18T13:22:00.371021Z",
+     "start_time": "2023-09-18T13:22:00.129337Z"
     }
    },
    "outputs": [],
