--- a/notebooks/BR_h_Decays.ipynb
+++ b/notebooks/BR_h_Decays.ipynb
@@ -104,19 +104,13 @@
     "    Sdqq_values = []\n",
     "    SdXdXd_values = []\n",
     "    SdtotalW_values = []\n",
-    "    Sdhh = ((1 + (2*Mh**2)/MSd**2)**2*MSd*sy.sqrt((1 - (4*Mh**2)/MSd**2)*MSd**4)*Ca**2*Sa**2*(vev2*Ca + vev*Sa)**2)/(32*sy.pi*vev**2*vev2**2)\n",
-    "    SdXdXd = ((-4*Ca**2*Mchi**2*ychi**2 + Ca**2*MSd**2*ychi**2)*sy.sqrt(-4*Mchi**2*MSd**2 + MSd**4))/(32*sy.pi*abs(MSd)**3)\n",
-    "    Sdtata = ((MSd**2*Sa**2*ytau**2 - 4*MTA**2*Sa**2*ytau**2)*sy.sqrt(MSd**4 - 4*MSd**2*MTA**2))/(16*sy.pi*abs(MSd)**3)\n",
-    "    Sdtt = ((3*MSd**2*Sa**2*yt**2 - 12*MT**2*Sa**2*yt**2)*sy.sqrt(MSd**4 - 4*MSd**2*MT**2))/(16*sy.pi*abs(MSd)**3)\n",
-    "    SdWW = (((3*ee**4*Sa**2*vev**2)/(4*sw**4) + (ee**4*MSd**4*Sa**2*vev**2)/(16*MW**4*sw**4) - (ee**4*MSd**2*Sa**2*vev**2)/(4*MW**2*sw**4))*sy.sqrt(MSd**4 - 4*MSd**2*MW**2))/(16*sy.pi*abs(MSd)**3)\n",
+    "    Sdhh = ((Ca**6*lam3**2*vev**2 + 12*Ca**4*lam1*lam3*Sa**2*vev**2 - 4*Ca**4*lam3**2*Sa**2*vev**2 + 36*Ca**2*lam1**2*Sa**4*vev**2 - 24*Ca**2*lam1*lam3*Sa**4*vev**2 + 4*Ca**2*lam3**2*Sa**4*vev**2 - 12*Ca**5*lam2*lam3*Sa*vev*vev2 + 4*Ca**5*lam3**2*Sa*vev*vev2 - 72*Ca**3*lam1*lam2*Sa**3*vev*vev2 + 24*Ca**3*lam1*lam3*Sa**3*vev*vev2 + 24*Ca**3*lam2*lam3*Sa**3*vev*vev2 - 10*Ca**3*lam3**2*Sa**3*vev*vev2 - 12*Ca*lam1*lam3*Sa**5*vev*vev2 + 4*Ca*lam3**2*Sa**5*vev*vev2 + 36*Ca**4*lam2**2*Sa**2*vev2**2 - 24*Ca**4*lam2*lam3*Sa**2*vev2**2 + 4*Ca**4*lam3**2*Sa**2*vev2**2 + 12*Ca**2*lam2*lam3*Sa**4*vev2**2 - 4*Ca**2*lam3**2*Sa**4*vev2**2 + lam3**2*Sa**6*vev2**2)*cmath.sqrt(Mh**4 - 4*Mh**2*MSd**2))/(32.*cmath.pi*abs(Mh)**3)\n",
+    "    SdXdXd = ((-4*Mchi**2*Sa**2*ychi**2 + Mh**2*Sa**2*ychi**2)*cmath.sqrt(-4*Mchi**2*Mh**2 + Mh**4))/(32.*cmath.pi*abs(Mh)**3)\n",
+    "    Sdtata = ((Ca**2*Mh**2*ytau**2 - 4*Ca**2*MTA**2*ytau**2)*cmath.sqrt(Mh**4 - 4*Mh**2*MTA**2))/(16.*cmath.pi*abs(Mh)**3)\n",
+    "    Sdtt = ((3*Ca**2*Mh**2*yt**2 - 12*Ca**2*MT**2*yt**2)*cmath.sqrt(Mh**4 - 4*Mh**2*MT**2))/(16.*cmath.pi*abs(Mh)**3)\n",
+    "    SdWW = (((3*Ca**2*ee**4*vev**2)/(4.*sw**4) + (Ca**2*ee**4*Mh**4*vev**2)/(16.*MW**4*sw**4) - (Ca**2*ee**4*Mh**2*vev**2)/(4.*MW**2*sw**4))*cmath.sqrt(Mh**4 - 4*Mh**2*MW**2))/(16.*cmath.pi*abs(Mh)**3)\n",
     "    SZpZp = ((192*Ca**2*gchi**4*gZp**4*vev2**2 + (16*Ca**2*gchi**4*gZp**4*MSd**4*vev2**2)/MZp**4 - (64*Ca**2*gchi**4*gZp**4*MSd**2*vev2**2)/MZp**2)*sy.sqrt(MSd**4 - 4*MSd**2*MZp**2))/(32*sy.pi*abs(MSd)**3)\n",
-    "    SdZZ = -1/32*(MW**4*sy.sqrt(MSd**4*(1 - (4*MZ**2)/MSd**2))*(-12*MZ**4 + MSd**4*(-1 + (4*MZ**2)/MSd**2))*Sa**2*(cw**2 + sw**2)**4)/(cw**4*MZ**4*sy.pi*vev**2*abs(MSd)**3)\n",
-    "    #Sdtata = simplify(simplify( Stata ).subs(MTA**2, X *MSd**2)).subs(X, MTA**2 /MSd**2)\n",
-    "    #Sdtt = simplify(simplify( Stt ).subs(MT**2, X *MSd**2)).subs(X, MT**2 /MSd**2)\n",
-    "    #SdXdXd = simplify(simplify( SXdXd ).subs(Mchi**2, X *MSd**2)).subs(X, Mchi**2 /MSd**2)\n",
-    "    #SdWW = simplify(simplify( SWW  ).subs(MW**2, X *MSd**2)).subs(X, MW**2 /MSd**2)\n",
-    "    #SdZZ = simplify(simplify( SZZ ).subs(MZ**2, X *MSd**2)).subs(X, MZ**2 /MSd**2)\n",
-    "    #Sdhh = simplify(simplify(Shh  ).subs(Mh**2, X *MSd**2)).subs(X, Mh**2 /MSd**2)    \n",
+    "    SdZZ = (((9*Ca**2*ee**4*vev**2)/2. + (3*Ca**2*ee**4*Mh**4*vev**2)/(8.*MZ**4) - (3*Ca**2*ee**4*Mh**2*vev**2)/(2.*MZ**2) + (3*Ca**2*cw**4*ee**4*vev**2)/(4.*sw**4) + (Ca**2*cw**4*ee**4*Mh**4*vev**2)/(16.*MZ**4*sw**4) - (Ca**2*cw**4*ee**4*Mh**2*vev**2)/(4.*MZ**2*sw**4) + (3*Ca**2*cw**2*ee**4*vev**2)/sw**2 + (Ca**2*cw**2*ee**4*Mh**4*vev**2)/(4.*MZ**4*sw**2) - (Ca**2*cw**2*ee**4*Mh**2*vev**2)/(MZ**2*sw**2) + (3*Ca**2*ee**4*sw**2*vev**2)/cw**2 + (Ca**2*ee**4*Mh**4*sw**2*vev**2)/(4.*cw**2*MZ**4) - (Ca**2*ee**4*Mh**2*sw**2*vev**2)/(cw**2*MZ**2) + (3*Ca**2*ee**4*sw**4*vev**2)/(4.*cw**4) + (Ca**2*ee**4*Mh**4*sw**4*vev**2)/(16.*cw**4*MZ**4) - (Ca**2*ee**4*Mh**2*sw**4*vev**2)/(4.*cw**4*MZ**2))*cmath.sqrt(Mh**4 - 4*Mh**2*MZ**2))/(32.*cmath.pi*abs(Mh)**3)                       \n",
     "    Sdqq =  Sdtt \n",
     "    SdtotalW = Sdqq + SdXdXd + SdWW + SdZZ + Sdhh + Sdtata\n",
     "    \n",
@@ -231,59 +225,6 @@
     "plt.yscale('log')\n",
     "plt.legend()\n",
     "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/latex": [
-       "$\\displaystyle \\frac{MZp^{4} gqV^{2}}{4 \\pi \\left|{MZp}\\right|^{3}}$"
-      ],
-      "text/plain": [
-       "MZp**4*gqV**2/(4*pi*Abs(MZp)**3)"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "import sympy as sy\n",
-    "from sympy import *\n",
-    "gqA = 0\n",
-    "gZp =1\n",
-    "gqV, MY1, MZp, gVd33, gAd33 = symbols('gqV MY1 MZp gVd33 gAd33')\n",
-    "gqL = (gqV + gqA)\n",
-    "(MZp**2*(6*gqL**2*gZp**2*MZp**2 + 6*gqR**2*gZp**2*MZp**2))/(48*sy.pi*abs(MZp)**3)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/latex": [
-       "$\\displaystyle \\frac{MY_{1}^{4} gVd_{33}^{2}}{4 \\pi \\left|{MY_{1}}\\right|^{3}}$"
-      ],
-      "text/plain": [
-       "MY1**4*gVd33**2/(4*pi*Abs(MY1)**3)"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "gAd33 = 0\n",
-    "(MY1**2*(12*gAd33**2*MY1**2 + 12*gVd33**2*MY1**2))/(48*sy.pi*abs(MY1)**3)"
    ]
   }
  ],
