--- a/notebooks/Obtain-BRs.ipynb
+++ b/notebooks/Obtain-BRs.ipynb
@@ -112,8 +112,8 @@
     "for gq in gqV:\n",
     "    for g in gchi:\n",
     "        for m in MZp:\n",
-    "            gqL = (gqA + gq)/2.\n",
-    "            gqR = (-gqA + gq)/2.\n",
+    "            gqL = (gqA + gq)\n",
+    "            gqR = (-gqA + gq)\n",
     "            \n",
     "            # Zp to t \n",
     "            if m < 2*MT:\n",
@@ -157,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "id": "bc3fa6c0",
    "metadata": {
     "ExecuteTime": {
@@ -205,7 +205,7 @@
        "      <td>NaN</td>\n",
        "      <td>0.1</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>0.405367</td>\n",
+       "      <td>0.145612</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -215,7 +215,7 @@
        "      <td>NaN</td>\n",
        "      <td>0.1</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>0.623433</td>\n",
+       "      <td>0.292732</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -225,7 +225,7 @@
        "      <td>NaN</td>\n",
        "      <td>0.1</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>0.725391</td>\n",
+       "      <td>0.397730</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -235,7 +235,7 @@
        "      <td>NaN</td>\n",
        "      <td>0.1</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>0.781062</td>\n",
+       "      <td>0.471424</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -245,7 +245,7 @@
        "      <td>NaN</td>\n",
        "      <td>0.1</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>0.815220</td>\n",
+       "      <td>0.524479</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -258,102 +258,102 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>5735</th>\n",
+       "      <th>95</th>\n",
        "      <td>$Z^{\\prime}$</td>\n",
-       "      <td>2960</td>\n",
-       "      <td>0.25</td>\n",
+       "      <td>1090</td>\n",
+       "      <td>0.01</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>2.0</td>\n",
+       "      <td>0.1</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>0.876400</td>\n",
+       "      <td>0.731217</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>5736</th>\n",
+       "      <th>96</th>\n",
        "      <td>$Z^{\\prime}$</td>\n",
-       "      <td>2970</td>\n",
-       "      <td>0.25</td>\n",
+       "      <td>1100</td>\n",
+       "      <td>0.01</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>2.0</td>\n",
+       "      <td>0.1</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>0.876402</td>\n",
+       "      <td>0.731289</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>5737</th>\n",
+       "      <th>97</th>\n",
        "      <td>$Z^{\\prime}$</td>\n",
-       "      <td>2980</td>\n",
-       "      <td>0.25</td>\n",
+       "      <td>1110</td>\n",
+       "      <td>0.01</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>2.0</td>\n",
+       "      <td>0.1</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>0.876404</td>\n",
+       "      <td>0.731359</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>5738</th>\n",
+       "      <th>98</th>\n",
        "      <td>$Z^{\\prime}$</td>\n",
-       "      <td>2990</td>\n",
-       "      <td>0.25</td>\n",
+       "      <td>1120</td>\n",
+       "      <td>0.01</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>2.0</td>\n",
+       "      <td>0.1</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>0.876406</td>\n",
+       "      <td>0.731428</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>5739</th>\n",
+       "      <th>99</th>\n",
        "      <td>$Z^{\\prime}$</td>\n",
-       "      <td>3000</td>\n",
-       "      <td>0.25</td>\n",
+       "      <td>1130</td>\n",
+       "      <td>0.01</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>2.0</td>\n",
+       "      <td>0.1</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>0.876408</td>\n",
+       "      <td>0.731495</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5740 rows × 7 columns</p>\n",
+       "<p>100 rows × 7 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "          Mediator  $m_{med}$  $g_{q}$  $\\sin\\theta$  $g_{\\chi}$  $y_{\\chi}$  \\\n",
-       "0     $Z^{\\prime}$        140     0.01           NaN         0.1         NaN   \n",
-       "1     $Z^{\\prime}$        150     0.01           NaN         0.1         NaN   \n",
-       "2     $Z^{\\prime}$        160     0.01           NaN         0.1         NaN   \n",
-       "3     $Z^{\\prime}$        170     0.01           NaN         0.1         NaN   \n",
-       "4     $Z^{\\prime}$        180     0.01           NaN         0.1         NaN   \n",
-       "...            ...        ...      ...           ...         ...         ...   \n",
-       "5735  $Z^{\\prime}$       2960     0.25           NaN         2.0         NaN   \n",
-       "5736  $Z^{\\prime}$       2970     0.25           NaN         2.0         NaN   \n",
-       "5737  $Z^{\\prime}$       2980     0.25           NaN         2.0         NaN   \n",
-       "5738  $Z^{\\prime}$       2990     0.25           NaN         2.0         NaN   \n",
-       "5739  $Z^{\\prime}$       3000     0.25           NaN         2.0         NaN   \n",
+       "        Mediator  $m_{med}$  $g_{q}$  $\\sin\\theta$  $g_{\\chi}$  $y_{\\chi}$  \\\n",
+       "0   $Z^{\\prime}$        140     0.01           NaN         0.1         NaN   \n",
+       "1   $Z^{\\prime}$        150     0.01           NaN         0.1         NaN   \n",
+       "2   $Z^{\\prime}$        160     0.01           NaN         0.1         NaN   \n",
+       "3   $Z^{\\prime}$        170     0.01           NaN         0.1         NaN   \n",
+       "4   $Z^{\\prime}$        180     0.01           NaN         0.1         NaN   \n",
+       "..           ...        ...      ...           ...         ...         ...   \n",
+       "95  $Z^{\\prime}$       1090     0.01           NaN         0.1         NaN   \n",
+       "96  $Z^{\\prime}$       1100     0.01           NaN         0.1         NaN   \n",
+       "97  $Z^{\\prime}$       1110     0.01           NaN         0.1         NaN   \n",
+       "98  $Z^{\\prime}$       1120     0.01           NaN         0.1         NaN   \n",
+       "99  $Z^{\\prime}$       1130     0.01           NaN         0.1         NaN   \n",
        "\n",
-       "      $BR(med>\\chi\\chi)$  \n",
-       "0               0.405367  \n",
-       "1               0.623433  \n",
-       "2               0.725391  \n",
-       "3               0.781062  \n",
-       "4               0.815220  \n",
-       "...                  ...  \n",
-       "5735            0.876400  \n",
-       "5736            0.876402  \n",
-       "5737            0.876404  \n",
-       "5738            0.876406  \n",
-       "5739            0.876408  \n",
+       "    $BR(med>\\chi\\chi)$  \n",
+       "0             0.145612  \n",
+       "1             0.292732  \n",
+       "2             0.397730  \n",
+       "3             0.471424  \n",
+       "4             0.524479  \n",
+       "..                 ...  \n",
+       "95            0.731217  \n",
+       "96            0.731289  \n",
+       "97            0.731359  \n",
+       "98            0.731428  \n",
+       "99            0.731495  \n",
        "\n",
-       "[5740 rows x 7 columns]"
+       "[100 rows x 7 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "BRdata"
+    "BRdata.head(100)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "id": "96e830b9",
    "metadata": {
     "ExecuteTime": {
@@ -402,7 +402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "id": "5ed2ab8c",
    "metadata": {
     "ExecuteTime": {
@@ -532,7 +532,7 @@
        "      <td>NaN</td>\n",
        "      <td>0.1</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>0.405367</td>\n",
+       "      <td>0.145612</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -542,7 +542,7 @@
        "      <td>NaN</td>\n",
        "      <td>0.1</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>0.623433</td>\n",
+       "      <td>0.292732</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -552,7 +552,7 @@
        "      <td>NaN</td>\n",
        "      <td>0.1</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>0.725391</td>\n",
+       "      <td>0.397730</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -562,7 +562,7 @@
        "      <td>NaN</td>\n",
        "      <td>0.1</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>0.781062</td>\n",
+       "      <td>0.471424</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -572,7 +572,7 @@
        "      <td>NaN</td>\n",
        "      <td>0.1</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>0.815220</td>\n",
+       "      <td>0.524479</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -654,11 +654,11 @@
        "7794       $S_{d}$       1500      NaN           0.3         NaN         2.0   \n",
        "\n",
        "      $BR(med>\\chi\\chi)$  \n",
-       "0               0.405367  \n",
-       "1               0.623433  \n",
-       "2               0.725391  \n",
-       "3               0.781062  \n",
-       "4               0.815220  \n",
+       "0               0.145612  \n",
+       "1               0.292732  \n",
+       "2               0.397730  \n",
+       "3               0.471424  \n",
+       "4               0.524479  \n",
        "...                  ...  \n",
        "7790            0.226537  \n",
        "7791            0.224156  \n",
@@ -680,7 +680,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 13,
    "id": "61c7dfbf",
    "metadata": {
     "ExecuteTime": {
@@ -695,11 +695,207 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "84bf1221",
+   "execution_count": 16,
+   "id": "0a07f31a",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "BRdata.to_excel('../data/BRdata.xlsx', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "84bf1221",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Mediator</th>\n",
+       "      <th>$m_{med}$</th>\n",
+       "      <th>$g_{q}$</th>\n",
+       "      <th>$\\sin\\theta$</th>\n",
+       "      <th>$g_{\\chi}$</th>\n",
+       "      <th>$y_{\\chi}$</th>\n",
+       "      <th>$BR(med&gt;\\chi\\chi)$</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>$Z^{\\prime}$</td>\n",
+       "      <td>140</td>\n",
+       "      <td>0.01</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.1</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.145612</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>$Z^{\\prime}$</td>\n",
+       "      <td>150</td>\n",
+       "      <td>0.01</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.1</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.292732</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>$Z^{\\prime}$</td>\n",
+       "      <td>160</td>\n",
+       "      <td>0.01</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.1</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.397730</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>$Z^{\\prime}$</td>\n",
+       "      <td>170</td>\n",
+       "      <td>0.01</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.1</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.471424</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>$Z^{\\prime}$</td>\n",
+       "      <td>180</td>\n",
+       "      <td>0.01</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.1</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.524479</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9845</th>\n",
+       "      <td>$S_{d}$</td>\n",
+       "      <td>1460</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.3</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>0.226537</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9846</th>\n",
+       "      <td>$S_{d}$</td>\n",
+       "      <td>1470</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.3</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>0.224156</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9847</th>\n",
+       "      <td>$S_{d}$</td>\n",
+       "      <td>1480</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.3</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>0.221810</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9848</th>\n",
+       "      <td>$S_{d}$</td>\n",
+       "      <td>1490</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.3</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>0.219496</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9849</th>\n",
+       "      <td>$S_{d}$</td>\n",
+       "      <td>1500</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.3</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>0.217215</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>9850 rows × 7 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          Mediator  $m_{med}$  $g_{q}$  $\\sin\\theta$  $g_{\\chi}$  $y_{\\chi}$  \\\n",
+       "0     $Z^{\\prime}$        140     0.01           NaN         0.1         NaN   \n",
+       "1     $Z^{\\prime}$        150     0.01           NaN         0.1         NaN   \n",
+       "2     $Z^{\\prime}$        160     0.01           NaN         0.1         NaN   \n",
+       "3     $Z^{\\prime}$        170     0.01           NaN         0.1         NaN   \n",
+       "4     $Z^{\\prime}$        180     0.01           NaN         0.1         NaN   \n",
+       "...            ...        ...      ...           ...         ...         ...   \n",
+       "9845       $S_{d}$       1460      NaN           0.3         NaN         2.0   \n",
+       "9846       $S_{d}$       1470      NaN           0.3         NaN         2.0   \n",
+       "9847       $S_{d}$       1480      NaN           0.3         NaN         2.0   \n",
+       "9848       $S_{d}$       1490      NaN           0.3         NaN         2.0   \n",
+       "9849       $S_{d}$       1500      NaN           0.3         NaN         2.0   \n",
+       "\n",
+       "      $BR(med>\\chi\\chi)$  \n",
+       "0               0.145612  \n",
+       "1               0.292732  \n",
+       "2               0.397730  \n",
+       "3               0.471424  \n",
+       "4               0.524479  \n",
+       "...                  ...  \n",
+       "9845            0.226537  \n",
+       "9846            0.224156  \n",
+       "9847            0.221810  \n",
+       "9848            0.219496  \n",
+       "9849            0.217215  \n",
+       "\n",
+       "[9850 rows x 7 columns]"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "BRdata = pd.read_pickle('../data/BRdata.pcl')\n",
+    "BRdata \n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
